data/derived/comb/progs/unify/prog8808.ml.out
Characters 66-89:
  | h::t -> listReverse (explode w);;
            ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type bool
